examples/test/testpolicy17232.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17232
  namespace: namespace7
spec:
  podSelector:
    matchLabels:
      key22: value42
      key16: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value49
      podSelector:
        matchLabels:
          key24: value12
          key23: value29
